更新 Hadoop 系列文档并升级项目依赖
补全 hadoop-cluster 目录文档内容与头信息，修正索引链接，并同步升级关键前端依赖版本以保持项目环境更新。

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>